--- a/app/assets/stylesheets/modules/modals.scss
+++ b/app/assets/stylesheets/modules/modals.scss
@@ -3,6 +3,7 @@
   height: 100%;
   position: fixed;
   top: 0;
+  z-index: 8;
 }
 
 .modal {
